--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,15 +1,65 @@
-/* App.css */
-.app-container {
-    /* Set the background image */
-    background-color: #a2cffe;
-    /* Specify background image properties */
-    background-size: cover; /* Cover the entire container */
-    background-position: center; /* Center the image */
-    /* Add any other styles you need */
-    /* For example: */
-    height: 100vh; /* Make the container full height */
-    display: flex; /* Use flexbox for layout */
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically */
+/* home.css */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+.main-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    overflow: hidden; /* Ensures the pseudo-element is contained within the div */
+  }
+  
+  .main-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*background-image: url('./cityscape.jpg'); */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.5; /* Adjust opacity as needed */
+    z-index: -1;
+  }
+  
+  .welcome-text {
+    font-size: 5rem;
+    color:#031d39;
+    margin: 0;
+    padding: 0;
+    /* animation styles can remain inline in your component if they're dynamic */
+  }
+  
+  .styled-button {
+    font-size: 1.5rem;
+    font-family: 'Outfit:wght@100..900';
+    padding: 15px 30px;
+    margin-top: 40px;
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    background-color: #031d39;
+    color: white;
+    transition: background-color 0.2s;
+  }
+  
+  .styled-button:hover {
+    background-color: #031d39;
+    color: #ffc52d;
+  }
+  
+  .about-section {
+    font-size: 2rem;
+    text-align: left;
+    padding: 50px 20px;
+    padding-left: 100px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
