changed homepage and about page

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ body {
 }
 
 code {
-  font-family: 'Outfit:wght@100..900', Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Outfit', Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
