--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,6 +3,7 @@
 
 .main-container {
     position: relative;
+    color: rgb(47, 68, 107);
     margin: 0;
     padding: 0;
     display: flex;
@@ -15,7 +16,7 @@
   }
   
   .main-container::before {
-    margin: 40px;
+    margin: 0;
     content: "";
     position: absolute;
     top: 0;
@@ -23,7 +24,7 @@
     width: 100%;
     height: 100%;
     background-image: url('./home-background.jpg');
-    background-size: cover;
+    background-size: 130% 130%;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.5; /* Adjust opacity as needed */
@@ -34,7 +35,7 @@
   .welcome-text {
     font-size: 5rem;
     color:#031d39;
-    margin: 0;
+    margin: -50;
     padding: 0;
     /* animation styles can remain inline in your component if they're dynamic */
   }
@@ -50,6 +51,7 @@
     background-color: #031d39;
     color: #ffffff;
     transition: background-color 0.2s;
+
   }
   
   .styled-button:hover {
@@ -61,32 +63,26 @@
         margin: 40px;
         font-family: 'Baskervville', serif; /* Fallback font added */
         font-style: italic;
-        font-size: 1.3rem;
+        font-size: 1.8rem;
     }
-  
-    /* Add this at the end of your home.css file */
+    
+    @keyframes slideInFromLeft {
+      0% {
+        transform: translateX(-150%); /* Start further off-screen */
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+    
+    .animated-text {
+      animation: slideInFromLeft 2s ease-out;
+      will-change: transform; /* Optimize for animations */
+    }
+    
 
-@keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-  
-  @keyframes blinkCursor {
-    from { border-right-color: rgba(0, 0, 0, 0.75); }
-    to { border-right-color: transparent; }
-  }
-  
-  .typing {
-    font-family: 'Courier New', Courier, monospace; /* Or any monospaced font you like */
-    display: inline-block;
-    overflow: hidden;
-    border-right: 3px solid;
-    white-space: nowrap;
-    animation: typing 3.5s steps(30) 1s forwards,
-               blinkCursor 500ms steps(30) infinite;
-    max-width: 100%;
-  }
-  
   .about-section {
     font-size: 2rem;
     text-align: left;
