--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,7 +12,7 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
-    overflow: hidden; /* Ensures the pseudo-element is contained within the div */
+    overflow: hidden;
   }
   
   .main-container::before {
@@ -27,9 +27,8 @@
     background-size: 130% 130%;
     background-position: center;
     background-repeat: no-repeat;
-    opacity: 0.5; /* Adjust opacity as needed */
+    opacity: 0.5;
     z-index: -1;
-
   }
   
   .welcome-text {
@@ -37,7 +36,7 @@
     color:#031d39;
     margin: -50;
     padding: 0;
-    /* animation styles can remain inline in your component if they're dynamic */
+    font-family: 'Outfit';
   }
   
   .styled-button {
@@ -47,28 +46,27 @@
     margin-top: 40px;
     cursor: pointer;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: #031d39;
     color: #ffffff;
     transition: background-color 0.2s;
-
   }
   
   .styled-button:hover {
-    background-color: #031d39;
+    background-color: #021326;
     color: #ffc52d;
   }
 
     .share-ride-text {
         margin: 40px;
-        font-family: 'Baskervville', serif; /* Fallback font added */
+        font-family: 'Baskervville', serif;
         font-style: italic;
         font-size: 1.8rem;
     }
     
     @keyframes slideInFromLeft {
       0% {
-        transform: translateX(-150%); /* Start further off-screen */
+        transform: translateX(-150%);
         opacity: 0;
       }
       100% {
@@ -79,7 +77,7 @@
     
     .animated-text {
       animation: slideInFromLeft 2s ease-out;
-      will-change: transform; /* Optimize for animations */
+      will-change: transform;
     }
     
 
